fixed email button; fixed text overflow on tiles; fixed Robot font substitution.

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 				}
 
 				body {
-					font-family: 'Roboto';
+					font-family: 'Open Sans';
 				}
 
 				a {
@@ -428,6 +428,27 @@
    					transition: all .3s ease-in-out;
 				}
 
+				.tile:after {
+					content: "";
+				    position: absolute;
+				    bottom: 0;
+				    width: 100%;
+				    height: 50px;
+				    display: block;
+					/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,ffffff+76,ffffff+100&0+0,0+0,1+76,1+100 */
+					background: -moz-linear-gradient(top,  rgba(255,255,255,0) 0%, rgba(255,255,255,1) 76%, rgba(255,255,255,1) 100%); /* FF3.6-15 */
+					background: -webkit-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 76%,rgba(255,255,255,1) 100%); /* Chrome10-25,Safari5.1-6 */
+					background: linear-gradient(to bottom,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 76%,rgba(255,255,255,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+					filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
+				}
+
+
+				.tile-poster.tile:after {
+					left: 31.5%;
+					width: 68.5%;
+				}
+
+
 				.tile:hover {
 					transform: scale(1.02); 
 				}
@@ -474,7 +495,6 @@
 					padding-top: 100%;
 				}
 
-
 				.tile a{
 					position: absolute;
 					top: 0;
@@ -484,12 +504,6 @@
 					z-index: 100;
 					border: 0;
 				}
-
-				/*
-				.tile-content img {
-					width: 100%;
-					display: block;
-				}*/
 
 				.tile-genre {
 					background-color: rgba(0,0,0,1);
@@ -506,11 +520,16 @@
 
 				.tile-additional-context {
 					padding: 5px 20px 20px 20px;
+					overflow: hidden;
 				}
 
-
-				.tile-additional-context img {
-					width: inherit;
+				.tile-additional-context p {
+				    display: inline-block;
+				    display: -webkit-inline-box;
+				    max-height: 100%;
+				    vertical-align: middle;
+				    -webkit-box-orient: vertical;
+				    -webkit-line-clamp: 2;
 				}
 
 				.tile-additional-context h3{
@@ -717,6 +736,7 @@
 					background-repeat: no-repeat;
 					background-position: right 20px center;
 					text-align: left;
+					width: 120px;
 				}
 
 				.button-facebook {
